--- a/week3/index.html
+++ b/week3/index.html
@@ -1,9 +1,14 @@
 <html>
+<html lang="en">
 <body>
 
 <p>This is a paragraph
 <p>This is a paragraph
 <p>This is a <br> paragraph with a line break.</p>
+<a href="https://www.w3schools.com">Visit W3Schools</a>
+<p style="color:red;">This is a red paragraph.</p>
+<p title="I'm a tooltip">This is a paragraph.</p>
+<a href="https://www.w3schools.com/html/">Visit our HTML tutorial</a>
 
 </body>
 </html>
