--- a/week3/index.html
+++ b/week3/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <body>
 
-<p>This is a paragraph
-<p>This is a paragraph
-<p>This is a <br> paragraph with a line break.</p>
-<a href="https://www.w3schools.com">Visit W3Schools</a>
-<p style="color:red;">This is a red paragraph.</p>
-<p title="I'm a tooltip">This is a paragraph.</p>
-<a href="https://www.w3schools.com/html/">Visit our HTML tutorial</a>
+<h1 style="font-size:60px;">Heading 1</h1>
+<h2>Heading 2</h2>
+<h3>Heading 3</h3>
+<h4>Heading 4</h4>
+<h5>Heading 5</h5>
+<h6>Heading 6</h6>
 
 </body>
 </html>
