--- a/week3/index.html
+++ b/week3/index.html
@@ -1,8 +1,12 @@
-<html lang="en">
-<body style="background-color:powderblue;">
-
-<h1 style="font-family:verdana;">This is a heading</h1>
-<p style="font-family:courier;">This is a paragraph.</p>
+<html>
+<body>
+<h1> Hi, I'm Shai </h1>
+<img src="https://trello.com/1/cards/638959f2682e4e007dc80231/attachments/63895bca7189fd03067a43aa/download/MicrosoftTeams-image.png" alt="Picture of Shai">
+<p> I'm an impulsive, unpredictable person. </p>
+<p> You can either guess or be surprised about what my next move is. </p>
+<p> I'm a dayfly, so don't trust me with long-term things about myself unless it involves the people I love. </p>
+<p> I really like the color pink, though I don't look like such a person who'd like that. </p>
+<p> I'm very talkative around people I like. If I don't talk around you, you already know what that means. </p>
 
 </body>
 </html>
