--- a/week3/index.html
+++ b/week3/index.html
@@ -1,11 +1,16 @@
 <html>
 <body>
 
-<h1 style="font-size:300%;">This is a heading</h1>
-<p style="font-size:160%;">This is a paragraph.</p>
-<p style="font-family:courier;">This is a paragraph.</p>
-<p style="color:red;">This is a paragraph.</p>
-<p style="background-color:tomato;">This is a paragraph.</p>
+<b>This text is bold</b>
+<strong>This text is important!</strong>
+<i>This text is italic</i>
+<em>This text is emphasized</em>
+<small>This is some smaller text.</small>
+<p>Do not forget to buy <mark>milk</mark> today.</p>
+<p>My favorite color is <del>blue</del> red.</p>
+<p>My favorite color is <del>blue</del> <ins>red</ins>.</p>
+<p>This is <sub>subscripted</sub> text.</p>
+<p>This is <sup>superscripted</sup> text.</p>
 
 </body>
 </html>
