--- a/week3/index.html
+++ b/week3/index.html
@@ -13,6 +13,7 @@
 <body>
 
 <h1 id="myHeader">My Header</h1>
+<img src="https://www.w3schools.com/images/picture.jpg" alt="Mountain">
 
 </body>
 </html>
