--- a/week3/index.html
+++ b/week3/index.html
@@ -1,19 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-#myHeader {
-  background-color: lightblue;
-  color: black;
-  padding: 40px;
-  text-align: center;
-}
-</style>
+  <title>A Meaningful Page Title</title>
 </head>
 <body>
 
-<h1 id="myHeader">My Header</h1>
-<img src="https://www.w3schools.com/images/picture.jpg" alt="Mountain">
+The content of the document......
 
 </body>
 </html>
