--- a/week3/index.html
+++ b/week3/index.html
@@ -5,7 +5,7 @@
 
 <p>I will display &euro;</p>
 <p>I will display &#8364;</p>
-<p>I will display &#x20AC;</p>
+<p>I will displa &#x20AC;</p>
 
 </body>
 </html>
