--- a/week3/index.html
+++ b/week3/index.html
@@ -3,9 +3,12 @@
 <body>
 <meta charset="UTF-8">
 
+<b><i>Some text</i></b>
 <p>I will display &euro;</p>
 <p>I will display &#8364;</p>
 <p>I will displa &#x20AC;</p>
+<p>This is a paragraph</p>
+<p>This is another paragraph</p>
 
 </body>
 </html>
