--- a/week3/index.html
+++ b/week3/index.html
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
 <html>
-<body>
-<meta charset="UTF-8">
+<head>
+<style>
+body {
+  background-color: lightblue;
+}
 
-<b><i>Some text</i></b>
-<p>I will display &euro;</p>
-<p>I will display &#8364;</p>
-<p>I will displa &#x20AC;</p>
-<p>This is a paragraph</p>
-<p>This is another paragraph</p>
+h1 {
+  color: white;
+  text-align: center;
+}
+
+p {
+  font-family: verdana;
+  font-size: 20px;
+}
+</style>
+</head>
+<body>
+
+<h1>My First CSS Example</h1>
+<p>This is a paragraph.</p>
 
 </body>
 </html>
+
 
