--- a/week3/index.html
+++ b/week3/index.html
@@ -2,25 +2,16 @@
 <html>
 <head>
 <style>
-body {
-  background-color: lightblue;
-}
-
-h1 {
-  color: white;
-  text-align: center;
-}
-
 p {
-  font-family: calibri;
-  font-size: 20px;
-}
+  color: blue;
+  text-align: center;
+} 
 </style>
 </head>
 <body>
 
-<h1>My First CSS Example</h1>
-<p>This is a paragraph.</p>
+<p>Hello World!</p>
+<p>These paragraphs are styled with CSS.</p>
 
 </body>
 </html>
