Lesson 8.1: Background Color

--- a/week3/index.html
+++ b/week3/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
+<head>
+<style>
+body {
+  background-color: lightblue;
+}
+</style>
+</head>
 <body>
 
-<h1>Specify colors using HSL values</h1>
+<h1>Hello World!</h1>
 
-<h2 style="background-color:hsl(0, 100%, 50%);">hsl(0, 100%, 50%)</h2>
-<h2 style="background-color:hsl(240, 100%, 50%);">hsl(240, 100%, 50%)</h2>
-<h2 style="background-color:hsl(147, 50%, 47%);">hsl(147, 50%, 47%)</h2>
-<h2 style="background-color:hsl(300, 76%, 72%);">hsl(300, 76%, 72%)</h2>
-<h2 style="background-color:hsl(39, 100%, 50%);">hsl(39, 100%, 50%)</h2>
-<h2 style="background-color:hsl(248, 53%, 58%);">hsl(248, 53%, 58%)</h2>
+<p>This page has a light blue background color!</p>
 
 </body>
 </html>
