--- a/week3/index.html
+++ b/week3/index.html
@@ -3,7 +3,7 @@
 <head>
 <style>
 body {
-  background-color: lightblue;
+  background-image: url("paper.gif");
 }
 </style>
 </head>
@@ -11,7 +11,7 @@ body {
 
 <h1>Hello World!</h1>
 
-<p>This page has a light blue background color!</p>
+<p>This page has an image as the background!</p>
 
 </body>
 </html>
