--- a/week3/index.html
+++ b/week3/index.html
@@ -3,15 +3,14 @@
 <head>
 <style>
 body {
-  background-image: url("paper.gif");
+  background-image: url("https://th.bing.com/th/id/OIP.qM_oqdoaICd0L2b4PSGNPAHaE8?pid=ImgDet&rs=1");
 }
 </style>
 </head>
 <body>
 
 <h1>Hello World!</h1>
-
-<p>This page has an image as the background!</p>
+<p>Strange background image...</p>
 
 </body>
 </html>
