My Very Own Profile

--- a/week3/index.html
+++ b/week3/index.html
@@ -2,39 +2,32 @@
 <html>
 <head>
 <style>
-p.normal {
-  border: 2px solid red;
-  padding: 5px;
+body {
+  background-color: pink;
 }
 
-p.round1 {
-  border: 2px solid red;
-  border-radius: 5px;
-  padding: 5px;
+h1 {
+	font-family: arial;
+	font-weight: bold;
 }
 
-p.round2 {
-  border: 2px solid red;
-  border-radius: 8px;
-  padding: 5px;
+p {
+	font-family: arial
 }
 
-p.round3 {
-  border: 2px solid red;
-  border-radius: 12px;
-  padding: 5px;
+#subtext {
+	font-style: italic;
 }
+
 </style>
 </head>
 <body>
 
-<h2>The border-radius Property</h2>
-<p>This property is used to add rounded borders to an element:</p>
+<h1>Hi, I'm Shai!</h1>
+<img src="https://trello.com/1/cards/638959f2682e4e007dc80231/attachments/63895bca7189fd03067a43aa/previews/63895bca7189fd03067a43b6/download/MicrosoftTeams-image.png.webp" alt="Shai Valdez" style="width:350px;height:350px">
 
-<p class="normal">Normal border</p>
-<p class="round1">Round border</p>
-<p class="round2">Rounder border</p>
-<p class="round3">Roundest border</p>
+<p>That's me, and if you can't tell, I really like cats!</p>
+<p id="subtext">But that doesn't mean I don't like dogs!</p>
 
 </body>
 </html>
