My Profile! with revisions

--- a/week3/index.html
+++ b/week3/index.html
@@ -15,7 +15,7 @@ body {
 }
 
 .header {
-	background-color: pink;
+	background-image: linear-gradient(white, pink);
 	padding: 30px;
 	text-align: center;
 	font-size: 35px;
@@ -26,6 +26,7 @@ body {
 	float: left;
 	width: 33.33%;
 	padding: 10px;
+	border-radius: 25px;
 }
 
 .row:after {
@@ -83,6 +84,7 @@ body {
 <div class="footer">
   <p>That's me, and if you can't tell, I really like cats!</p>
   <p id="subtext">But that doesn't mean I don't like dogs!</p>
+  <p>Click here to see my references!</p>
 </div>
 
 </body>
