--- a/week5/index.html
+++ b/week5/index.html
@@ -68,7 +68,7 @@ body {
   I'm a dayfly!
   </div>
   <div class="column" style="background-color:#eee;">
-  <img src="https://trello.com/1/cards/638959f2682e4e007dc80231/attachments/63895bca7189fd03067a43aa/previews/63895bca7189fd03067a43b6/download/MicrosoftTeams-image.png.webp" alt="Shai Valdez" style="width:350px;height:350px">
+  <img src="https://pbs.twimg.com/profile_images/1611058389853036544/f1s1mMWV_400x400.jpg" alt="Shai Valdez" style="width:350px;height:350px">
   </div>
   <div class="column" style="background-color:#ddd;">
   I really like hanging out with my friends!
