--- a/week5/index.html
+++ b/week5/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Hi, I'm Shai!</title>
+<link rel="icon" type="image/x-icon" href="favicon.ico">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -11,7 +12,15 @@
 
 body {
 	font-family: Arial, Helvetica, sans-serif;
+	color: white;
 	background-color: pink;
+	text-align: center;
+}
+
+h2 {
+	font-family: Arial, Helvetica, sans-serif;
+	color: black;
+	text-align: center;
 }
 
 .header {
@@ -60,17 +69,17 @@ body {
 </div>
 
 <div class="row">
-  <div class="column" style="background-color:#ccc;">
+  <div class="column" style="background-color:#444;">
   I'm just a simple 21-year old Pasayeño studying at Asia Pacific College as frustrated Game Development student!
   <br><br>
   I've been a scholar student all my life; without scholarships I'd be as good as dead!
   <br><br>
   I'm a dayfly!
   </div>
-  <div class="column" style="background-color:#eee;">
-  <img src="https://trello.com/1/cards/638959f2682e4e007dc80231/attachments/63895bca7189fd03067a43aa/previews/63895bca7189fd03067a43b6/download/MicrosoftTeams-image.png.webp" alt="Shai Valdez" style="width:350px;height:350px">
+  <div class="column" style="background-color:#333;">
+  <img src="picture.png" alt="Shai Valdez" style="width:350px;height:350px">
   </div>
-  <div class="column" style="background-color:#ddd;">
+  <div class="column" style="background-color:#444;">
   I really like hanging out with my friends!
   <br><br>
   I really value quality time with people!
@@ -84,7 +93,7 @@ body {
 <div class="footer">
   <p>That's me, and if you can't tell, I really like cats!</p>
   <p id="subtext">But that doesn't mean I don't like dogs!</p>
-  <p>Click here to see my references!</p>
+  <p><a href="resources.html">Click here to see my references!</a></p>
 </div>
 
 </body>
