Added a button for date and time using JavaScript.

--- a/week5/resources.html
+++ b/week5/resources.html
@@ -52,6 +52,7 @@ body {
   <a href="https://www.w3schools.com/css/default.asp">My Templates</a>
   <a href="Full Name.pdf">My Information</a>
   <a href="favicon.ico">My Website Favicon</a>
+  <a href="https://www.w3schools.com/js/default.asp">My JavaScript Reference</a>
 
 </div>
 
