--- a/week5/index.html
+++ b/week5/index.html
@@ -76,11 +76,15 @@ h2 {
   <br><br>
   I'm a dayfly!
   </div>
+  
   <div class="column" style="background-color:#333;">
-
   <img src="picture.png" alt="Shai Valdez" style="width:350px;height:350px">
+  <button type="button" onclick="document.getElementById('demo').innerHTML = Date()">
+  What time is it?</button>
+  <p id="demo"></p>
 
   </div>
+  
   <div class="column" style="background-color:#444;">
   I really like hanging out with my friends!
   <br><br>
