--- a/week5/index.html
+++ b/week5/index.html
@@ -78,10 +78,12 @@ h2 {
   </div>
   
   <div class="column" style="background-color:#333;">
-  <img src="picture.png" alt="Shai Valdez" style="width:350px;height:350px">
-  <button type="button" onclick="document.getElementById('demo').innerHTML = Date()">
-  What time is it?</button>
-  <p id="demo"></p>
+  <button onclick="document.getElementById('myImage').src='cool_shai.png'">Click here for Cool Shai</button>
+  <img id="myImage" src="picture.png" style="width:350px;height:350px">
+  <button onclick="document.getElementById('myImage').src='picture.png'">Click here for Sleepy Shai</button>
+  <p id="demo">What time is it?</p>
+  <button type="button" onclick='document.getElementById("demo").innerHTML = "It is party time!"'>
+  ?</button>
 
   </div>
   
