--- a/week5/resources.html
+++ b/week5/resources.html
@@ -48,11 +48,13 @@ body {
 
 <div class="sidenav">
 
-  <a href="picture.png">My Picture</a>
+  <a href="picture.png">My Sleepy Picture</a>
+  <a href="cool_shai.png">My Cool Picture</a>
   <a href="https://www.w3schools.com/css/default.asp">My Templates</a>
   <a href="Full Name.pdf">My Information</a>
   <a href="favicon.ico">My Website Favicon</a>
   <a href="https://www.w3schools.com/js/default.asp">My JavaScript Reference</a>
+  
 
 </div>
 
