Added a button that hides the text in both columns using JavaScript.

--- a/week5/index.html
+++ b/week5/index.html
@@ -70,11 +70,15 @@ h2 {
 
 <div class="row">
   <div class="column" style="background-color:#444;">
-  I'm just a simple 21-year old Pasayeño studying at Asia Pacific College as frustrated Game Development student!
-  <br><br>
-  I've been a scholar student all my life; without scholarships I'd be as good as dead!
-  <br><br>
-  I'm a dayfly!
+  <button type="buttonLeftColumnHide" onclick="document.getElementById('textLeft').style.display='none'">I don't wanna see this!</button>
+  <p id="textLeft">
+	I'm just a simple 21-year old Pasayeño studying at Asia Pacific College as frustrated Game Development student!
+	<br><br>
+	I've been a scholar student all my life; without scholarships I'd be as good as dead!
+	<br><br>
+	I'm a dayfly!
+  </p>
+
   </div>
   
   <div class="column" style="background-color:#333;">
@@ -88,13 +92,17 @@ h2 {
   </div>
   
   <div class="column" style="background-color:#444;">
-  I really like hanging out with my friends!
-  <br><br>
-  I really value quality time with people!
-  <br><br>
-  I have so much love and power for a small body of mine!
-  <br><br>
-  I have sensory, emotional, and mental issues.
+  <button type="buttonRightColumnHide" onclick="document.getElementById('textRight').style.display='none'">I don't wanna see this!</button>
+  <p id="textRight">
+	I really like hanging out with my friends!
+	<br><br>
+	I really value quality time with people!
+	<br><br>
+	I have so much love and power for a small body of mine!
+	<br><br>
+	I have sensory, emotional, and mental issues.
+  </p>
+
   </div>
 </div>
 
