Added a button that shows hidden text in both columns using JavaScript.

--- a/week5/index.html
+++ b/week5/index.html
@@ -78,7 +78,7 @@ h2 {
 	<br><br>
 	I'm a dayfly!
   </p>
-
+  <button type="buttonLeftColumnShow" onclick="document.getElementById('textLeft').style.display='block'">Wait, I wanna see this again!</button>
   </div>
   
   <div class="column" style="background-color:#333;">
@@ -102,7 +102,7 @@ h2 {
 	<br><br>
 	I have sensory, emotional, and mental issues.
   </p>
-
+  <button type="buttonRightColumnShow" onclick="document.getElementById('textRight').style.display='block'">Wait, I wanna see this again!</button>
   </div>
 </div>
 
