Added an alert box to my website using JavaScript.

--- a/week5/index.html
+++ b/week5/index.html
@@ -64,6 +64,10 @@ h2 {
 </head>
 <body>
 
+<script>
+alert("Whoa, you're heading into new territory!");
+</script>
+
 <div class="header">
   <h2>Hi, I'm Shai!</h2>
 </div>
