--- a/week5/index.html
+++ b/week5/index.html
@@ -65,6 +65,7 @@ h2 {
 <body>
 
 <script>
+//  a little alert box before people see my website
 alert("Whoa, you're heading into new territory!");
 </script>
 
@@ -74,6 +75,7 @@ alert("Whoa, you're heading into new territory!");
 
 <div class="row">
   <div class="column" style="background-color:#444;">
+  <!-- a button to hide text on the left column -->
   <button type="buttonLeftColumnHide" onclick="document.getElementById('textLeft').style.display='none'">I don't wanna see this!</button>
   <p id="textLeft">
 	I'm just a simple 21-year old Pasayeño studying at Asia Pacific College as frustrated Game Development student!
@@ -82,20 +84,25 @@ alert("Whoa, you're heading into new territory!");
 	<br><br>
 	I'm a dayfly!
   </p>
+  <!-- a button to show hidden text on the left column -->
   <button type="buttonLeftColumnShow" onclick="document.getElementById('textLeft').style.display='block'">Wait, I wanna see this again!</button>
   </div>
   
   <div class="column" style="background-color:#333;">
+  <!-- a button to show cool_shai.png -->
   <button onclick="document.getElementById('myImage').src='cool_shai.png'">Click here for Cool Shai</button>
   <img id="myImage" src="picture.png" style="width:350px;height:350px">
+  <!-- a button to show sleepy shai picture -->
   <button onclick="document.getElementById('myImage').src='picture.png'">Click here for Sleepy Shai</button>
   <p id="demo">What time is it?</p>
+  <!-- a button to show what "time" it is hehe -->
   <button type="button" onclick='document.getElementById("demo").innerHTML = "It is party time!"'>
   ?</button>
 
   </div>
   
   <div class="column" style="background-color:#444;">
+  <!-- a button to hide text on the right column -->
   <button type="buttonRightColumnHide" onclick="document.getElementById('textRight').style.display='none'">I don't wanna see this!</button>
   <p id="textRight">
 	I really like hanging out with my friends!
@@ -106,6 +113,7 @@ alert("Whoa, you're heading into new territory!");
 	<br><br>
 	I have sensory, emotional, and mental issues.
   </p>
+  <!-- a button to show hidden text on the right column -->
   <button type="buttonRightColumnShow" onclick="document.getElementById('textRight').style.display='block'">Wait, I wanna see this again!</button>
   </div>
 </div>
