Revamping my website with a new CSS layout.

--- a/week5/resources.html
+++ b/week5/resources.html
@@ -48,12 +48,14 @@ body {
 
 <div class="sidenav">
 
-  <a href="picture.png">My Sleepy Picture</a>
+  <a href="index1.html">Go Back to My Profile</a>
   <a href="cool_shai.png">My Cool Picture</a>
-  <a href="https://www.w3schools.com/css/default.asp">My Templates</a>
   <a href="Full Name.pdf">My Information</a>
-  <a href="favicon.ico">My Website Favicon</a>
   <a href="https://www.w3schools.com/js/default.asp">My JavaScript Reference</a>
+  <a href="picture.png">My Sleepy Picture</a>
+  <a href="https://www.w3schools.com/css/default.asp">My Templates</a>
+  <a href="favicon.ico">My Website Favicon</a>
+
   
 
 </div>
