--- a/week5/resources.html
+++ b/week5/resources.html
@@ -49,7 +49,14 @@ body {
 <div class="sidenav">
 
   <a href="index1.html">Go Back to My Profile</a>
+  <br>
+  <br>
+  <a href="badmintonShai.jpg">My Badminton Picture</a>
+  <a href="bar.jpg">My Bar Picture</a>
   <a href="cool_shai.png">My Cool Picture</a>
+  <a href="dogShai.jpg">My Dog Picture</a>
+  <a href="friendShai.jpg">My Friend Picture</a>
+  <a href="gamerShai.jpg">My Gamer Picture</a>
   <a href="Full Name.pdf">My Information</a>
   <a href="https://www.w3schools.com/js/default.asp">My JavaScript Reference</a>
   <a href="picture.png">My Sleepy Picture</a>
