--- a/week5/index1.html
+++ b/week5/index1.html
@@ -171,6 +171,7 @@ alert("Whoa, you're heading into new territory!");
           city: "Pasay",
           age: 20,
         };
+      document.getElementById("facts").innerHTML = "Basic facts: " + person.firstName + " " + person.lastName + ", " + person.city + ", " + person.age;
       </script>
     </div>
     <div class="card">
