--- a/week5/index1.html
+++ b/week5/index1.html
@@ -118,7 +118,7 @@ alert("Whoa, you're heading into new territory!");
 
 <div class="header">
   <h1>Hi, I'm Shai!</h1>
-  <p>Take a quick look at my website. Or stare at it, I don't know.</p>
+  <p>Take a quick look at my website. Or stare at it. I don't know.</p>
 </div>
 
 <div class="topnav">
