--- a/week5/index1.html
+++ b/week5/index1.html
@@ -139,6 +139,11 @@ alert("Whoa, you're heading into new territory!");
       <p>I'm just a simple Pasayeño studying at Asia Pacific College as a frustrated Game Development student!</p>
       <p>I've been a scholar student all my life; without scholarships I'd be as good as dead!</p>
       <p>I'm a dayfly!</p>
+      <p>I'm a math nerd! Here, have a random number: </p>
+      <p id = "math"></p>
+      <script>
+        document.getElementById("math").innerHTML = Math.random();
+      </script>
     </div>
     <div class="card">
       <h2>SOME MORE TIDBITS ABOUT ME</h2>
