--- a/week9/resources1.html
+++ b/week9/resources1.html
@@ -48,7 +48,7 @@ body {
 
 <div class="sidenav">
 
-  <a href="index1.php">Go Back to My Profile</a>
+  <a href="index.php">Go Back to My Profile</a>
   <br>
   <br>
   <a href="badmintonShai.jpg">My Badminton Picture</a>
